# pringle

./: .gitignore  .gitmessage  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md  feature.md  performance.md
.github/workflows/: publish.yml
design-docs/: 01-desmos-3d-overview.md  02-python-gpu-rendering.md  03-expression-evaluation.md  04-animation-and-time-variation.md  05-architecture-decisions.md  06-panel-architecture.md  07-cell-types-and-blocks.md  08-visual-styling.md  09-processing-pipeline.md  10-session-format.md  11-recurrence-relations.md  12-user-input-and-interaction.md  13-development-plan.md  14-backlog.md  14-bug-backlog.md  14-namespace-reference.md  15-feature-backlog.md  16-closed-bugs.md  17-closed-features.md  18-performance-backlog.md  19-closed-performance.md  20-profiling-sop.md  thoughts.md
design-docs/roles/: developer.md  planner.md  profiler.md
examples/: atomic_orbitals.yml  energy_landscape.py  hello.yml  icon.yml  klein_bottle.yml  lorenz-particles.yml  lorenz-vector-field.yml  lorenz.yml  memory.yml  mobius_strip.yml  pringle.yml  rossler.yml  scatter.yml  sphere.yml  torus.yml  vector-field-2D-trajectory.yml  vector-field-2D.yml  vector-field-3D-animation.yml  vector-field-3D.yml  vector-field-heatmap.yml
examples/tutorials/: 02_sliders.yml  03_animation.yml  05_constraints.yml  06_scatter.yml  08_recurrence.yml
pringle/: __init__.py  _app.py  app.py  ast_utils.py  cell_list.py  cell_widget.py  comment_cell_widget.py  config.py  dag.py  data_cell_widget.py  data_panel.py  evaluator.py  export.py  figure.py  folder_cell_widget.py  grid.py  header_bar.py  namespace.py  preprocess.py  recurrence.py  renderer.py  safety.py  session.py  slider_controls_popover.py  slider_widget.py  style.py  style_popover.py  syntax_highlighter.py  syntax_theme.py  theme.py  theme.qss  view_settings.py
tests/: bench_cell_rebuild.py  bench_slider_animation.py  bench_vector_field.py  conftest.py  piecewise.py  recursion.md  recursion.py  scatter.py  surface.md  surface.py  test_bug038.py  test_bug039.py  test_bug040.py  test_bug041.py  test_bug042.py  test_bug043.py  test_bug044.py  test_bug045.py  test_bug068.py  test_bug071.py  test_bug072.py  test_bug073.py  test_bug074.py  test_bug075.py  test_bug179.py  test_bug180.py  test_feat038.py  test_feat039.py  test_feat045.py  test_feat046.py  test_feat047.py  test_feat049.py  test_feat050.py  test_feat051.py  test_feat052.py  test_feat053.py  test_feat054.py  test_feat055.py  test_feat057.py  test_feat058.py  (+29 more)
(+35 files in other folders)
