[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["pringle", "pringle.*"]

[project]
name = "pringle"
version = "0.0.0"
description = "Interactive graph an surface plotter."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Greyson Brothers", email = "greysonbrothers@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
    "tqdm",
    "numpy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/agbrothers/pringle"
Issues = "https://github.com/agbrothers/pringle/issues"
