[build-system]
requires      = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["pringle", "pringle.*"]

[tool.setuptools.package-data]
pringle = ["assets/*.png", "*.qss"]

[project]
name = "pringle"
version = "0.0.0"
description = "Interactive graph an surface plotter."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Greyson Brothers", email = "greysonbrothers@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3"
]
dependencies = [
    "tqdm",
    "numpy",
    "matplotlib",
    "pygfx>=0.9",
    "wgpu>=0.20",
    "PyQt6>=6.6",
    "imageio>=2.34",
    "pyyaml>=6.0",
    "networkx>=3.3",
    "scipy>=1.13",
    "numba>=0.59",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pringle = "pringle.app:launch"
crunch  = "pringle.app:launch"

[project.urls]
Homepage = "https://github.com/agbrothers/pringle"
Issues = "https://github.com/agbrothers/pringle/issues"
